--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Krzysztof Woliński",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^24.9.0"
+    "jest": "24.9.0"
   }
 }
