--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "robot-cleaner",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "jest"
-  },
+  "description": "Robot cleaner",
   "author": "Krzysztof Woliński",
   "license": "ISC",
+  "scripts": {
+    "start": "node src/index.js",
+    "test": "jest"
+  },
   "devDependencies": {
     "jest": "24.9.0"
+  },
+  "jest": {
+    "verbose": true,
+    "testMatch": ["**/*.spec.js"]
   }
 }
